[gd_scene load_steps=3 format=3 uid="uid://n8gpt8oxh1b5"]

[ext_resource type="Script" path="res://addons/gamepush/Demo/Modules/rewards.gd" id="1_82xd1"]
[ext_resource type="StyleBox" uid="uid://b8gk1mmy8e4dt" path="res://addons/gamepush/Demo/GP_Green_box_flat.tres" id="2_povfu"]

[node name="Rewards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_82xd1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_styles/panel = ExtResource("2_povfu")

[node name="Header" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Head"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Rewards"

[node name="Header" type="Panel" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IDLabel" type="Label" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
visible = false
layout_mode = 1
offset_left = 185.0
offset_top = 21.0
offset_right = 293.0
offset_bottom = 44.0
text = "ID: 455715383"

[node name="id_or_tag" type="LineEdit" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -15.5
offset_right = 93.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "id or tag..."

[node name="ButtonGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.71
columns = 3

[node name="give" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "give"

[node name="accept" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "accept"

[node name="list" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "list"

[node name="given_list" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "given_list"

[node name="get_reward" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "get_reward"

[node name="has" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "has"

[node name="has_accepted" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "has_accepted"

[node name="has_unaccepted" type="Button" parent="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "has_unaccepted"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/give" to="." method="_on_give_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/list" to="." method="_on_list_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/given_list" to="." method="_on_given_list_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/get_reward" to="." method="_on_get_reward_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/has" to="." method="_on_has_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/has_accepted" to="." method="_on_has_accepted_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/VBoxContainer/ButtonGrid/has_unaccepted" to="." method="_on_has_unaccepted_pressed"]
